--- a/test/item.html
+++ b/test/item.html
@@ -45,7 +45,7 @@
       <main id="page-content-wrapper">
         <div class="container-fluid">
           <header>
-            <p><span style="font-size: 85px">M</span>ISSING <span style="font-size: 85px">L</span>INKS</p>
+            <p><span style="font-size: 98px">M</span>ISSING <span style="font-size: 98px">L</span>INKS</p>
             <!-- <hr id="undLine" style="height:30px"> -->
           </header>
 
@@ -82,7 +82,8 @@
                   <p class="lead" id="longDescriptionP"> <!-- {{this.longDescription}} -->
                     You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.
                   </p>
-                  <p class="lead">
+                  <p class="lead" id="price">
+                    <h3>$54.50</h3>
                     <a class="btn btn-primary btn-lg" href="#" role="button" id="purchase">Purchase</a>
                   </p>
                   <!-- <hr class="my-2"> -->
