pushing prior to switching to master to grab Mary's new seeder doc

--- a/test/Landing_page.html
+++ b/test/Landing_page.html
@@ -50,8 +50,6 @@
             <!-- <hr id="undLine" style="height:30px"> -->
           </header>
 
-          <div class="row" id="subHeader">
-
 <!--            <div class="col-xs-4" id="picCol">
               <div class="row">
                 <div class="col-xs-10 offset-xs-1" id="mainPicDiv">
@@ -69,11 +67,10 @@
                   {{this.pic4}}
                 </div>
               </div>
-            </div> 
+            </div>
             <!-- end picCol -->
-
-            <div class="col-xs-8" id="infoCol">
-              <div class="row">
+            <div class="row" id="subHeader">
+              <div class="col-xs-10 offset-xs-1">
                 <div class="jumbotron" id="jumbo">
                   <h2 id="itemNameH"> <!-- {{this.itemName}} -->
                   Something for Everyone!
@@ -105,11 +102,9 @@
                 </div>
               </div>   ///// This section would populate the comments section if we want it -->
 
-            </div> <!-- end infoCol -->
+            </div> <!-- end subheader -->
 
           </div> <!-- end main container row -->
-
-        </div>
       </main>
     </div>
   </body>
